# mech_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
Config_ARuco/: arUcoList_modified.xml  calibration_Romanova_webka.yaml  camera.yaml  camera40_AR.yaml  camera_10AR.yaml  camera_40AR.yaml  camera_Gazebo.yaml  camera_Gazebo2.yml  camera_calibration_from_distance.yaml  camera_old.yaml  camera_old2.yaml  camera_old3.yaml  camera_old5.yaml
Markers/: Create_MarkerList.py  Create_charuc_board.py  Markers.odg
Multiplot_config/: Difference_marker_board.xml  IMU_odometry_angular_velocity.xml  IMU_pose.xml  Localization.xml  Localization_magnets.xml  MARKER_pose_quaternion.xml  Marker_pose.xml  Odometrie_plus_rychlost_kola.xml  Orientation_ang_velocity.xml  SLAM.xml  Velocity_comparsion.xml  Velocity_control.xml  XY.xml  Yaw_IMU.xml
SMACH/: Create_SMACH.py  Iterator.py  Move_base_SMACH.py  Sequence.py  Simple_action_SMACH.py  User_data_SMACH.py  after_charging.py  charging.py  complete_SMACH.py  mbf_move_base_action.py  mbf_state_machine_ceres.py  monitor_battery.py  navigate.py  navigate2station.py  send_velocity_command.py  set_pose.py  set_solenoid.py  smach_polyfill.py  stop_robot.py  wait_for_charge.py  wait_for_endstop.py  wait_for_goal.py  wait_for_recharge.py  wait_for_timed_out.py
Worlds/: Muzeum.world  Muzeum_AR.world  Muzeum_AR_modified.world  Muzeum_AR_upraveno.world  Muzeum_AR_upraveno2.world  Muzeum_AR_upraveno3.world  Muzeum_AR_upraveno4.world  Muzeum_zaloha.world
control/: mechROS.yaml  mechROS_control.yaml  mechROS_skid_steer_control.yaml  (+1 more)
(+204 files in other folders)
