<?xml version="1.0"?>
<package format="2">
  <name>mech_ros</name>
  <version>0.0.0</version>
  <description>The mech_ros package</description>
  <maintainer email="vavrapatrik@email.cz">Patrik Vavra</maintainer>

  <license>BSD</license>
  <author email="vavrapatrik@email.cz">Patrik Vavra</author>
  <url type="repository">https://github.com/Vpatrik/mech_ros.git</url>

   <buildtool_depend>catkin</buildtool_depend>



 <exec_depend>smach_ros</exec_depend>
 <exec_depend>smach_utils</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
<exec_depend>moveback_recovery</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
